# Pacman-RL

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
assets/: anim.ipynb
libs/packman-visual/src/: main.py
libs/packman-visual/src/packmanvis/: app.py  environment.py
libs/packman-visual/src/packmanvis/algorithms/maze/: __init__.py  generate.py
libs/packman-visual/src/packmanvis/assets/: sprites.ipynb
libs/packman-visual/src/packmanvis/core/: gamewindow.py
libs/packman-visual/src/packmanvis/core/widgets/: __init__.py  animate.py  bar.py  button.py  labirinth.py  labyrinth.py  maze.py  path.py  wall.py
libs/packman-visual/src/packmanvis/types/: __init__.py  action.py  animated.py  coin.py  collidable.py  entity.py  labirinth.py  labyrinth.py  maze.py  state.py  wall.py  wall_type.py
libs/packman-visual/src/packmanvis/types/items/: __init__.py  coin.py  item.py
libs/packman-visual/src/packmanvis/types/mobs/: __init__.py  action.py  ghost.py  mob.py  pacman.py  state.py
libs/packman-visual/src/packmanvis/types/structure/: __init__.py  floor.py  wall.py  wall_type.py
libs/pacmanagent/: pyproject.toml
libs/pacmanagent/src/pacmanagent/: agent.py
libs/pacmanengine/: pyproject.toml
libs/pacmanengine/src/pacmanengine/: __init__.py  environment.py
libs/pacmanengine/src/pacmanengine/algorithms/agent/: agent.py
libs/pacmanengine/src/pacmanengine/algorithms/agent/ghost/: __init__.py  a_star.py  blinky.py  clyde.py  ghost.py  inky.py  pinky.py  state.py
libs/pacmanengine/src/pacmanengine/algorithms/maze/: generate.py  strave.py
libs/pacmanengine/src/pacmanengine/algorithms/maze/types/: __init__.py
libs/pacmanengine/src/pacmanengine/types/: __init__.py  animated.py  collidable.py  maze.py  maze_state.py  position.py
libs/pacmanengine/src/pacmanengine/types/items/: __init__.py  coin.py  item.py
libs/pacmanengine/src/pacmanengine/types/mobs/: __init__.py  action.py  ghost.py  mob.py  pacman.py
libs/pacmanengine/src/pacmanengine/types/structure/: __init__.py  floor.py  wall.py
src/: gamewindow.py
src/widgets/: __init__.py  animate.py  maze.py
(+3 files in other folders)
