[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__"
]
extend-ignore = [
    "E203",
]
per-file-ignores = """
    __init__.py: F401
"""

[project]
name = "packman-rl"
version = "0.0.1"
authors = [
    {name="Ihor Kostiuk", email="ihor.kostiuk@knu.ua"}
]
description = "Pacman realization of RL agent."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
