[build-system]
requires = [
    "hatchling==1.25.0",
]
build-backend = "hatchling.build"

[project]
name = "pacmanagent"
version = "0.0.1"
authors = [
    {name="Ihor Kostiuk", email="ihor.kostiuk@knu.ua"}
]
description = "An implementation of RL algorithm for Pacman."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.26.4",
    "pacmanengine"
]
