[build-system]
requires = [
    "hatchling==1.25.0",
]
build-backend = "hatchling.build"

[project]
name = "pacmanagent"
version = "0.0.1"
authors = [
    {name="Ihor Kostiuk", email="ihor.kostiuk@knu.ua"}
]
description = "An implementation of Agent algorithms for Pacman."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pacmanengine",
    "keyboard"
]
