[build-system]
requires = [
    "hatchling==1.25.0",
]
build-backend = "hatchling.build"

[project]
name = "pacmanengine"
version = "0.0.1"
authors = [
    {name="Ihor Kostiuk", email="ihor.kostiuk@knu.ua"}
]
description = "An engine for playing pacman."
readme = "README.md"
requires-python = "<=3.10.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "mazelib"
]
